--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -3,14 +3,19 @@
 %table
   %tr
     %th Title
+    <th style="display: block; white-space: nowrap; width: 200px; height: 20px; overflow: hidden">
     %th Text
     %th{:colspan => "3"}
+    %th Total Comments
   - @articles.each do |article|
     %tr
       %td= article.title
+      <td style="display: block; white-space: nowrap; width: 200px; height: 20px; overflow: hidden">
       %td= article.text
       %td= link_to 'Show', article_path(article)
       %td= link_to 'Edit', edit_article_path(article)
       %td= link_to 'Destroy', article_path(article), |
           method: :delete,                          |
           data: { confirm: 'Are you sure?' }        |
+      %td= @comments_by_article[article.id] && @comments_by_article[article.id].count
+      
