--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -54,12 +54,67 @@ body {
   pointer-events: none;
 }
 
-footer {
-  background-color: #ebebeb;
-  padding: 30px 0;
-}
-
 header {
   background-color: #ebebeb;
   padding: 5px 0;
 }
+
+table {
+  border-collapse: collapse;
+  text-align: left;
+  width: 100%;
+  tr:nth-child(even) {background-color: #f2f2f2;}
+}
+
+th {
+  height: 30px;
+  background-color: #4CAF50;
+  color: white;
+}
+
+td {
+  height: 30px;
+  vertical-align: bottom;
+}
+
+th, td {
+  padding: 10px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+a:hover {
+  color: red;
+}
+
+footer {
+  font-family: Verdana, Geneva, sans-serif;
+  font-size: 0.7em;
+  font-weight: bold;
+  color: #FFF;
+  background-color: #666;
+  padding: 10px;
+  margin: 20px;
+  height: auto;
+  width: 96%;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+ }
+
+ #footer a:link {
+  color: #CC0;
+ }
+ #footer a:visited {
+  color: #0C6;
+ }
+ #footer a:hover {
+  color: #FFF;
+  background-color: #CC0;
+  text-decoration: none;
+ }
+ #footer a:active {
+  color: #FFF;
+  background-color: #0C6;
+  text-decoration: none;
+ }
