--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -9,9 +9,9 @@
 %div{:style => "text-align: center"}
   %img{:src => "/images/blogImage.png", :width => "100"}/
 
-%h1 Write your own Blog!
-
-= link_to 'My Blog', controller: 'articles'
+%h1 Welcome!
+%h2
+  = link_to 'View Blogs', controller: 'articles'
 
 
 
