--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -81,5 +81,56 @@
     color: #fff;
   }
   
+  .label {
+    color: white;
+    padding: 10px;
+  }
 
+  strong {
+    font-weight: bold;
+  }
+
+  .header {
+    overflow: hidden;
+    background-color: #f1f1f1;
+    padding: 5px 10px;
+  }
+
+  .header a {
+    color: black;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 25px;
+    border-radius: 4px; 
+  }
+
+  /* Change the background color on mouse-over */
+.header a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Style the active/current link*/
+.header a.active {
+  background-color: dodgerblue;
+  color: white;
+}
+
+/* Float the link section to the right */
+.header-right {
+  float: right;
+}
+
+.field {
+  width: 30%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  background-color: lightblue;
+  
+}
+
+field.label {
+  padding: 20px;
+}
   
